# galaxycash

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL  INSTALL.md  Makefile.am  README.md  archive.sh  asunix.sh  configure.ac  galaxycash-classic.pro  galaxycash-cli-classic.pro  galaxycash-cli.pro  galaxycash.pro  galaxycashd-classic.pro  galaxycashd.pro  libgalaxycashconsensus.pc.in
.github/: FUNDING.yml
contrib/: README.md  galaxycash-cli.bash-completion  galaxycash-qt.pro  galaxycash-tx.bash-completion  galaxycashd.bash-completion  gitian-build.sh  install_db4.sh  valgrind.supp
depends/: README.md
doc/: Doxyfile.in  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  assets-attribution.txt  benchmarking.md  build-msw.txt  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-unix.txt  build-windows.md  coding.txt  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
scripts/: config-debian.sh  config-windows.sh  debuild.sh  dependencies-ubuntu.sh  galaxycashconf.sh  install-osx.sh  install-ubuntu.sh  mkpkg.py
share/: genbuild.sh  setup.nsi.in  Новый текстовый документ.txt
src/: Makefile.am  Makefile.qt.include  activemasternode.cpp  activemasternode.h  activemasternodeman.cpp  activemasternodeman.h  addrman.cpp  addrman.h  alert.cpp  alert.h  allocators.h  amount.cpp  amount.h  anonsend-relay.cpp  anonsend-relay.h  anonsend.cpp  anonsend.h  arith_uint256.cpp  arith_uint256.h  assets.h  base58.cpp  base58.h  bignum.h  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  blockencodings.cpp  blockencodings.h  blockfile.cpp  blockfile.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  (+131 more)
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  strnlen.cpp
src/config/: galaxcash-config.h.in
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: blake.cpp  bmw.cpp  byteswap.h  common.h  cubehash.cpp  echo.cpp  endian.h  fugue.c  fugue.cpp  groestl.cpp  hamsi.c  hamsi.cpp  hamsi_helper.c  jh.cpp  keccak.cpp  luffa.cpp  md_helper.cpp  panama.cpp  ripemd.c  ripemd.cpp  sha0.cpp  sha2.c  sha2.cpp  sha2big.c  sha2big.cpp  shavite.cpp  simd.cpp  skein.cpp  sph_fugue.h  sph_hamsi.h  sph_panama.h  sph_sha0.h  sph_sha1.h  sph_sha2.h
src/crypto/ctaes/: README.md
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/leveldb/: build_detect_platform
src/policy/: policy.cpp  policy.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: aboutdialog.cpp  addeditgalaxynode.cpp  addeditgalaxynode.h  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  anonsendconfig.cpp  anonsendconfig.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoin.cpp  bitcoin.qrc  bitcoingui.cpp  bitcoinstrings.cpp  bitcoinunits.cpp  blockbrowser.cpp  blockbrowser.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  editaddressdialog.cpp  galaxycash.cpp  galaxycash.qrc  galaxycash_locale.qrc  galaxycashaddressvalidator.cpp  galaxycashaddressvalidator.h  galaxycashamountfield.cpp  galaxycashamountfield.h  galaxycashgui.cpp  galaxycashgui.h  galaxycashstrings.cpp  galaxycashunits.cpp  galaxycashunits.h  galaxynodeconfigdialog.cpp  galaxynodeconfigdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  (+55 more)
src/qt/forms/: aboutdialog.ui  addeditgalaxynode.ui  addressbookpage.ui  anonsendconfig.ui  askpassphrasedialog.ui  blockbrowser.ui  coincontroldialog.ui  debugwindow.ui  galaxynodeconfigdialog.ui  helpmessagedialog.ui  masternodemanager.ui  modaloverlay.ui  multisigaddressentry.ui  multisigdialog.ui  multisiginputentry.ui  optionsdialog.ui  overviewpage.ui  qrcodedialog.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af.ts  bitcoin_af_ZA.ts  bitcoin_am.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bg_BG.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cs_CZ.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_de_DE.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_en_AU.ts  bitcoin_en_GB.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_419.ts  bitcoin_es_AR.ts  bitcoin_es_CL.ts  bitcoin_es_CO.ts  bitcoin_es_DO.ts  bitcoin_es_ES.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_es_VE.ts  bitcoin_et.ts  bitcoin_et_EE.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_FR.ts  (+219 more)
src/qt/res/: galaxycash-qt-res.rc  galaxycash-qt.rc
src/qt/res/icons/: galaxycash.icns
src/qt/res/qss/: dark.qss
src/qt/res/themes/: default.qss
src/qt/test/: uritests.cpp
src/rpc/: blockchain.cpp  client.cpp  masternode.cpp  mining.cpp  misc.cpp  net.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp
src/script/: bitcoinconsensus.cpp  bitcoinconsensus.h  galaxycashconsensus.cpp  galaxycashconsensus.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/primitives/: block.cpp  block.h
src/secp256k1/src/: libsecp256k1-config.h.in~  tests.c
src/secp256k1/src/java/: org_galaxycash_NativeSecp256k1.c  org_galaxycash_NativeSecp256k1.h  org_galaxycash_Secp256k1Context.c  org_galaxycash_Secp256k1Context.h
src/secp256k1/src/java/org/galaxycash/: NativeSecp256k1.java  NativeSecp256k1Test.java  NativeSecp256k1Util.java  Secp256k1Context.java
src/support/: lockedpool.cpp
src/univalue/include/: univalue.h
src/wallet/: db.cpp  init.cpp  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h
src/zmq/: zmqconfig.h
(+95 files in other folders)
